<resources>
    <string name="app_name">Germinate</string>
    <string name="action_settings">Settings</string>
    <string name="dialog_title_add_text">New text entry</string>
    <string name="dialog_title_add_image">New image entry</string>
    <string name="search_action_name">Search</string>
    <string name="input_prompt_text">Enter note</string>
    <string name="input_prompt_tags">Enter tags</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
</resources>
