<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".GridActivity">

    <!-- Add new text icon to toolbar -->
    <item android:id="@+id/add_text_entry"
          android:title="@string/dialog_title_add_text"
          android:icon="@drawable/ic_add_text"
          android:orderInCategory="1"
          android:menuCategory="secondary"
          app:showAsAction="ifRoom"/>

    <!-- Add new image icon to toolbar -->
    <item android:id="@+id/add_image_entry"
          android:title="@string/dialog_title_add_image"
          android:icon="@drawable/ic_add_image"
          android:orderInCategory="2"
          android:menuCategory="secondary"
          app:showAsAction="ifRoom"/>

    <!-- Add search icon to toolbar -->
    <item android:id="@+id/search"
          android:title="@string/search_action_name"
          android:icon="@android:drawable/ic_menu_search"
          android:orderInCategory="3"
          app:showAsAction="collapseActionView|ifRoom"
          android:actionViewClass="android.widget.SearchView" />

    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          app:showAsAction="never"/>

</menu>
