<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:minHeight="300dp"
              android:minWidth="500dp"
              android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="30dp"
            android:hint="@string/input_prompt_text"
            android:layout_weight="1"
            android:inputType="text|textMultiLine"
            android:paddingEnd="24dp"
            android:paddingStart="24dp"
            android:paddingTop="24dp"
            android:layout_gravity="start|top"
            android:gravity="start|top"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:paddingStart="24dp"
            android:paddingEnd="24dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_gravity="bottom"
                android:hint="@string/input_prompt_tags"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_gravity="bottom">

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_gravity="end"
            android:padding="8dp"
            android:text="@string/cancel"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_gravity="end"
            android:padding="8dp"
            android:text="@string/save"/>

    </LinearLayout>

</LinearLayout>

